crates/pina_cli/tests/snapshots/explain_command__explain_custom_error_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 70
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": "authority",
      "index": 0,
      "signer": true,
      "writable": true
    },
    {
      "absent": false,
      "address": "8SFqwqnq4whPhs8icwHA2hQg3hUoN1qrCLK1SBx3WKwe",
      "field": "policy",
      "index": 1,
      "signer": false,
      "writable": true
    },
    {
      "absent": false,
      "address": "11111111111111111111111111111111",
      "field": "system_program",
      "index": 2,
      "signer": false,
      "writable": false
    }
  ],
  "candidates": [
    {
      "accountIndex": null,
      "confidence": "possible",
      "field": "minimum",
      "location": "src/lib.rs:97",
      "logConfirmed": false,
      "reason": "value rules read the decoded instruction data",
      "rule": "value >= 1",
      "scope": "argument"
    },
    {
      "accountIndex": null,
      "confidence": "possible",
      "field": "minimum",
      "location": "src/lib.rs:98",
      "logConfirmed": false,
      "reason": "value rules read the decoded instruction data",
      "rule": "value <= MAX_POLICY_AMOUNT",
      "scope": "argument"
    },
    {
      "accountIndex": null,
      "confidence": "possible",
      "field": "maximum",
      "location": "src/lib.rs:104",
      "logConfirmed": false,
      "reason": "value rules read the decoded instruction data",
      "rule": "value >= 1",
      "scope": "argument"
    },
    {
      "accountIndex": null,
      "confidence": "possible",
      "field": "maximum",
      "location": "src/lib.rs:105",
      "logConfirmed": false,
      "reason": "value rules read the decoded instruction data",
      "rule": "value <= MAX_POLICY_AMOUNT",
      "scope": "argument"
    }
  ],
  "errorSites": [
    {
      "context": "InitializePolicyInstruction",
      "inFailingInstruction": true,
      "location": "src/lib.rs:99"
    },
    {
      "context": "InitializePolicyInstruction",
      "inFailingInstruction": true,
      "location": "src/lib.rs:106"
    },
    {
      "context": "CheckPolicyInstruction",
      "inFailingInstruction": false,
      "location": "src/lib.rs:130"
    }
  ],
  "failure": {
    "cpi": null,
    "error": {
      "code": 2,
      "description": "An instruction amount is outside the absolute limits of this program.",
      "kind": "program",
      "name": "ValidationError::InvalidAmount"
    },
    "instruction": {
      "accountsStruct": "InitializeAccounts",
      "name": "initialize_policy",
      "rustName": "InitializePolicyInstruction"
    },
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 140 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: custom program error: 0x2"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "3ppGiQzbkCqX3ZRMrkU1ePbiSeLs6Z3ZNkK7hU7Sm3rZyaMRp3brMHeDWv1bTZAyjL24vQMAGs1Wa35TXGKL4YP3",
  "slot": 67,
  "source": "file",
  "status": "failed"
}
