crates/pina_cli/tests/snapshots/explain_command__explain_missing_signer_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 70
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": "authority",
      "index": 0,
      "signer": false,
      "writable": false
    },
    {
      "absent": false,
      "address": "GyGKxMyg1p9SsHfm15MkNUu1u9TN2JtTspcdmrtGUdse",
      "field": "policy",
      "index": 1,
      "signer": false,
      "writable": false
    },
    {
      "absent": false,
      "address": "AKnL4NNf3DGWZJS6cPknBuEGnVsV4A4m5tgebLHaRSZ9",
      "field": "audit",
      "index": 2,
      "signer": true,
      "writable": true
    },
    {
      "absent": false,
      "address": "11111111111111111111111111111111",
      "field": "system_program",
      "index": 3,
      "signer": false,
      "writable": false
    }
  ],
  "candidates": [
    {
      "accountIndex": 0,
      "confidence": "confirmed",
      "field": "authority",
      "location": "src/lib.rs:214",
      "logConfirmed": false,
      "reason": "account #0 (9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu) is not a signer of this transaction",
      "rule": "signer",
      "scope": "account"
    }
  ],
  "errorSites": [],
  "failure": {
    "cpi": null,
    "error": {
      "code": null,
      "description": null,
      "kind": "builtin",
      "name": "MissingRequiredSignature"
    },
    "instruction": {
      "accountsStruct": "CheckAccounts",
      "name": "check_policy",
      "rustName": "CheckPolicyInstruction"
    },
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 76 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: missing required signature for instruction"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "63T6XGyihfHKThEZFe36L5LkmAqJ8uVaqzQ6Po4ovSZPzCCDKk5h8EJGHdyQFP5sbbDwbW2csgfXWbWZWrXDjD7f",
  "slot": 61,
  "source": "file",
  "status": "failed"
}
