crates/pina_cli/tests/snapshots/explain_command__explain_not_enough_accounts_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 70
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": "authority",
      "index": 0,
      "signer": true,
      "writable": false
    },
    {
      "absent": false,
      "address": "GyGKxMyg1p9SsHfm15MkNUu1u9TN2JtTspcdmrtGUdse",
      "field": "policy",
      "index": 1,
      "signer": false,
      "writable": false
    },
    {
      "absent": false,
      "address": "EdmxWPmx2WH6WgFfTdu9xfkYf3k1g5wD1zccTVySEEh1",
      "field": "audit",
      "index": 2,
      "signer": false,
      "writable": true
    }
  ],
  "candidates": [
    {
      "accountIndex": 3,
      "confidence": "confirmed",
      "field": "system_program",
      "location": "src/lib.rs:225",
      "logConfirmed": false,
      "reason": "the instruction passed 3 account(s), so `CheckAccounts` has no slot #3 for `system_program`",
      "rule": "required account",
      "scope": "account"
    }
  ],
  "errorSites": [],
  "failure": {
    "cpi": null,
    "error": {
      "code": null,
      "description": null,
      "kind": "builtin",
      "name": "NotEnoughAccountKeys"
    },
    "instruction": {
      "accountsStruct": "CheckAccounts",
      "name": "check_policy",
      "rustName": "CheckPolicyInstruction"
    },
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 64 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: insufficient account keys for instruction"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "3kSPqzjvy6Rauh4xmFDFjpRVhmDuEaqjRaGeCMsA2k3eE6414KJ6jofZR4xZHAGKQ8R13mPnzErq61t3ZafevbMT",
  "slot": 64,
  "source": "file",
  "status": "failed"
}
