crates/pina_cli/tests/snapshots/explain_command__explain_readonly_mut_field_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 70
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": "authority",
      "index": 0,
      "signer": true,
      "writable": true
    },
    {
      "absent": false,
      "address": "8SFqwqnq4whPhs8icwHA2hQg3hUoN1qrCLK1SBx3WKwe",
      "field": "policy",
      "index": 1,
      "signer": false,
      "writable": false
    },
    {
      "absent": false,
      "address": "11111111111111111111111111111111",
      "field": "system_program",
      "index": 2,
      "signer": false,
      "writable": false
    }
  ],
  "candidates": [
    {
      "accountIndex": 1,
      "confidence": "confirmed",
      "field": "policy",
      "location": "src/lib.rs:197",
      "logConfirmed": true,
      "reason": "account #1 (8SFqwqnq4whPhs8icwHA2hQg3hUoN1qrCLK1SBx3WKwe) is read-only in this transaction",
      "rule": "writable (`&mut` field)",
      "scope": "account"
    }
  ],
  "errorSites": [],
  "failure": {
    "cpi": null,
    "error": {
      "code": null,
      "description": null,
      "kind": "builtin",
      "name": "InvalidAccountData"
    },
    "instruction": {
      "accountsStruct": "InitializeAccounts",
      "name": "initialize_policy",
      "rustName": "InitializePolicyInstruction"
    },
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program log: account has not been marked as writable",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 196 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: invalid account data for instruction"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "RMKCYYk1EaBxmRRFj36faqckrfC9DN49QMp2vfQd6NH1DF9HvvsABmzdBgu82eukNEnZybDdXSTt3SxNCyfSLyj",
  "slot": 63,
  "source": "file",
  "status": "failed"
}
